accordion IE issue resolve

--- a/src/sass/components/_news.scss
+++ b/src/sass/components/_news.scss
@@ -96,7 +96,7 @@ section#news {
                             }
 
                             @media (min-width: 768px) {
-                                max-height: initial;
+                                max-height: 100%;
                                 opacity: 1;
                             }
 
